# chess

./: .eslintrc.json  .gitignore  AGENTS.md  Cargo.toml  bun.lockb  drizzle.config.ts  next.config.ts  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  prek.toml  prettier.config.mjs  reset.d.ts  skills-lock.json  tailwind.config.ts  tsconfig.json  vite-game-server.ts  vite.config.ts  vitest.config.ts  vitest.shims.d.ts  worker-configuration.d.ts  wrangler.jsonc
frontend/: .eslintrc.json  package.json  pnpm-lock.yaml  tailwind.config.js
game/: Cargo.toml
game-server/: Cargo.toml
game/src/: bitboard.rs  board.rs  main.rs
game/src/handlers/: admin.rs  game.rs  mod.rs
scripts/: patchGameServerWasmImport.mjs
services/rust/chess/: Cargo.toml  build.rs
services/rust/chess/bitboard/: Cargo.toml
services/rust/chess/bitboard/src/: bits.rs  lib.rs  shift.rs  square.rs  squares.rs
services/rust/chess/magics/: Cargo.toml
services/rust/chess/magics/src/: lib.rs  prng.rs
services/rust/chess/src/: board.rs  lib.rs  main.rs  service.rs
services/rust/chess/src/bitboard/: bits.rs  mod.rs
services/rust/chess/src/game/: board.rs  counter.rs  fen.rs  mod.rs  piece.rs  state.rs
services/rust/chess/src/game/bitboard/: bits.rs  mod.rs  shift.rs
services/rust/chess/src/game/moves/: bishop.rs  checkmask.rs  king.rs  knight.rs  list.rs  magics.rs  mod.rs  pawn.rs  pins.rs  queen.rs  rook.rs
src/: bitboard.rs  board-store.ts  board.rs  board.tsx  chessboard.tsx  clsx.ts  db.server.ts  game-server.test.ts  game-server.ts  game-store.ts  hooks.ts  magics.rs  main.rs  nanoid.server.ts  player-clock.tsx  reset.d.ts  room.server.ts  room.test.ts  room.ts  routeTree.gen.ts  router.tsx  schema.server.ts  server.ts  square.rs  test-utils.ts  use-live-room.ts  utils.ts  zod.ts
web/: .env.development  .eslintrc.json  .gitignore  bun.lockb  (+6 more)
(+89 files in other folders)
