[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
socketioxide = { version = "0.14.1", features = ["state", "tracing"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing-subscriber = "0.3.18"
